<resources>
    <string name="app_name">DebtControl</string>
    <string name="add_button_description">Add a debt to your list</string>
    <string name="debt_name_label">Debt Name</string>
    <string name="description_label">Description</string>
    <string name="Quantity_label">Total</string>
    <string name="Quantity_left_label">Left</string>
    <string name="Button_label">ADD</string>
    <string name="debt_user_label">Debitor</string>
    <string name="update_button">Update!</string>
    <string name="state_label">State</string>
    <string name="paid_label">Paid</string>
    <string name="unpaid_label">Not paid</string>
    <string name="partial_payment_label">Partial</string>
    <string name="seekbar_value_label">200€</string>
    <string name="ok_button_label">Ok</string>
    <string name="already_paid_label">Already paid</string>
</resources>
